// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Tags /> without throwing 1`] = `
.c4 {
  font-size: 80%;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  background-color: rgb(216,216,216);
}

.c1 {
  margin-right: 0.375rem;
}

.c5 {
  margin-top: 0.375rem;
  margin-bottom: undefined;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
  className=""
  id={undefined}
  onClick={undefined}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          height="19"
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 19 19"
          width="19"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.61,9.3,9.69.39A1.29,1.29,0,0,0,8.76,0H1.32A1.33,1.33,0,0,0,0,1.33V8.76a1.33,1.33,0,0,0,.39.94L9.3,18.61a1.33,1.33,0,0,0,.94.39,1.3,1.3,0,0,0,.93-.39l7.44-7.44A1.32,1.32,0,0,0,18.61,9.3Zm-1.68,1-6.65,6.65a.17.17,0,0,1-.12.05.14.14,0,0,1-.11-.05l-8-8a.18.18,0,0,1,0-.12V2.19A.17.17,0,0,1,2.18,2H8.84a.16.16,0,0,1,.11,0l8,8a.15.15,0,0,1,.05.11A.17.17,0,0,1,16.93,10.28ZM6.61,4.06A2.55,2.55,0,1,0,9.16,6.61,2.55,2.55,0,0,0,6.61,4.06Zm0,4.08A1.53,1.53,0,1,1,8.14,6.61,1.54,1.54,0,0,1,6.61,8.14Z"
            fill="rgb(73, 73, 73)"
          />
        </svg>
      </div>
    </div>
    <small
      className="c3 c4"
    >
      Tags
    </small>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6 c7"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Tags addOpen expanded /> without throwing 1`] = `
Array [
  .c4 {
  font-size: 80%;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  background-color: rgb(216,216,216);
}

.c1 {
  margin-right: 0.375rem;
}

.c5 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    height="19"
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19 19"
                    width="19"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M18.61,9.3,9.69.39A1.29,1.29,0,0,0,8.76,0H1.32A1.33,1.33,0,0,0,0,1.33V8.76a1.33,1.33,0,0,0,.39.94L9.3,18.61a1.33,1.33,0,0,0,.94.39,1.3,1.3,0,0,0,.93-.39l7.44-7.44A1.32,1.32,0,0,0,18.61,9.3Zm-1.68,1-6.65,6.65a.17.17,0,0,1-.12.05.14.14,0,0,1-.11-.05l-8-8a.18.18,0,0,1,0-.12V2.19A.17.17,0,0,1,2.18,2H8.84a.16.16,0,0,1,.11,0l8,8a.15.15,0,0,1,.05.11A.17.17,0,0,1,16.93,10.28ZM6.61,4.06A2.55,2.55,0,1,0,9.16,6.61,2.55,2.55,0,0,0,6.61,4.06Zm0,4.08A1.53,1.53,0,1,1,8.14,6.61,1.54,1.54,0,0,1,6.61,8.14Z"
                        fill="rgb(73, 73, 73)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3 c4"
        >
            Tags
        </small>
    </div>
    <div
        className="c5"
    >
        <div
            className="c6 c7"
            height="0.0625rem"
        />
    </div>
</div>,
  .c4 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c2 {
  margin-bottom: 1.125rem;
}

.c3 {
  margin: 0;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
    className="c0"
>
    <div
        className="c1"
    >
        <div
            className="c2"
        >
            <p
                className="c3 c4"
            >
                Tags can be used to identify your instances, group multiple instances together, define firewall and affinity rules, and more.
                 
                <a
                    href="https://docs.joyent.com/public-cloud/tags-metadata/tags"
                    rel="noopener noreferrer"
                    target="__blank"
                >
                    Read the docs
                </a>
            </p>
        </div>
    </div>
</div>,
  .c1 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c0 {
  margin-bottom: 1.875rem;
}

<div
    className="c0"
>
    <h3
        className="c1"
    >
        0
         Tag
        s
    </h3>
</div>,
  .c0 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ul
    className="c0"
/>,
  .c30 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c30::-moz-focus-inner,
.c30[type='button']::-moz-focus-inner,
.c30[type='reset']::-moz-focus-inner,
.c30[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c30:-moz-focusring,
.c30[type='button']:-moz-focusring,
.c30[type='reset']:-moz-focusring,
.c30[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c29 {
  min-width: 7.5rem;
}

.c28 {
  display: inline-block;
}

.c27 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c27:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c27:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c27:active,
.c27:active:hover,
.c27:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c27[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c27:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c27:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c27:active,
.c27:active:hover,
.c27:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c31 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  cursor: not-allowed;
  pointer-events: none;
  color: rgb(216,216,216);
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c31:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c31:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c31:active,
.c31:active:hover,
.c31:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c31[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c31:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c31:hover {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c31:active,
.c31:active:hover,
.c31:active:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c33 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(210,67,58);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(210,67,58);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  float: right;
}

.c33:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c33:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c33:active,
.c33:active:hover,
.c33:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c33[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c33:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c33:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c33:active,
.c33:active:hover,
.c33:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c33:focus {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c33:hover {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c33:active,
.c33:active:hover,
.c33:active:focus {
  background-color: rgba(210,67,58,0.1);
  border-color: rgb(205,37,27);
}

.c17 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c24 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c21 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c25 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c32 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c9 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c18 {
  margin-top: 0.1875rem;
}

.c23 {
  margin-top: 0.375rem;
}

.c34 {
  margin-right: 0.75rem;
}

.c5 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c12 {
  padding: 1.125rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c14 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c22 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
  -webkit-flex-basis: 0.75rem;
  -ms-flex-preferred-size: 0.75rem;
  flex-basis: 0.75rem;
}

.c0 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c3 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c11 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c10 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  background-color: transparent;
}

.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
}

.c8 {
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c15 {
  display: inline-block;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  width: 100%;
}

.c19 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c19:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c19::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c19::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c19:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c19:invalid {
  box-shadow: none;
}

.c19:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c19:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c19:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c19:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c16 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c1 {
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c26 {
  margin-right: 0.375rem;
}

.c4 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  width: 100%;
  box-sizing: border-box;
}

.c7 {
  height: 2.9375rem;
  max-width: 98%;
}

@media only screen and (min-width:0em) {
  .c24 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:0em) {
  .c24 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:48em) {
  .c21 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c25 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:0em) {
  .c32 {
    display: none;
  }
}

<form
    onSubmit={undefined}
>
    <div
        className="c0"
        disabled={false}
        name="card"
    >
        <div
            className="c1 c2 c3"
            disabled={false}
            name="card-header"
            onClick={false}
        >
            <div
                className="c4 c5"
            >
                <div
                    className="c6"
                >
                    <div
                        className="c7 c8 c3"
                        disabled={false}
                        name="card-header-meta"
                    >
                        <h4
                            className="c9"
                        >
                            Add tag
                        </h4>
                    </div>
                </div>
            </div>
        </div>
        <div
            className="c10 c11"
            disabled={false}
            name="card-outlet"
        >
            <div
                className="c12"
            >
                <div
                    className="c13"
                    wrap={true}
                >
                    <div
                        className="c14"
                    >
                        <div
                            className="c15"
                            name="name"
                            role="group"
                            style={undefined}
                        >
                            <label
                                className="c16 c17"
                                htmlFor="k"
                            >
                                Tag
                                 
                                key
                            </label>
                            <div
                                className="c18"
                            >
                                <input
                                    className="c19"
                                    disabled={false}
                                    id="k"
                                    onBlur={null}
                                />
                                <div
                                    className="c20"
                                >
                                    <div
                                        className="c21"
                                    />
                                </div>
                            </div>
                        </div>
                    </div>
                    <div
                        className="c22"
                    />
                    <div
                        className="c14"
                    >
                        <div
                            className="c15"
                            name="value"
                            role="group"
                            style={undefined}
                        >
                            <label
                                className="c16 c17"
                                htmlFor="l"
                            >
                                Tag
                                 value
                            </label>
                            <div
                                className="c18"
                            >
                                <input
                                    className="c19"
                                    disabled={false}
                                    id="l"
                                    onBlur={null}
                                />
                                <div
                                    className="c20"
                                >
                                    <div
                                        className="c21"
                                    />
                                </div>
                            </div>
                        </div>
                    </div>
                </div>
                <div
                    className="c23"
                >
                    <div
                        className="c24"
                    >
                        <div
                            className="c25"
                        >
                            <button
                                className="c26 c27 c28 c29 c30"
                                data-ui-button="true"
                                disabled={false}
                                href=""
                                onClick={[Function]}
                                type="button"
                            >
                                <span>
                                    Cancel
                                </span>
                            </button>
                            <button
                                className="c31 c28 c29 c30"
                                data-ui-button="true"
                                disabled={true}
                                href=""
                                type="submit"
                            >
                                <span>
                                    Create
                                </span>
                            </button>
                        </div>
                        <div
                            className="c32"
                        >
                            <button
                                className="c33 c28 c29 c30"
                                data-ui-button="true"
                                disabled={false}
                                href=""
                                icon={true}
                                onClick={[Function]}
                                type="button"
                            >
                                <div
                                    className="c34"
                                >
                                    <svg
                                        height="16"
                                        style={
                                            Object {
                                                "transform": "rotate(0deg)",
                                              }
                                        }
                                        viewBox="0 0 12 16"
                                        width="12"
                                        xmlns="http://www.w3.org/2000/svg"
                                    >
                                        <path
                                            d="M2.67,0V1.5H0V3H12V1.5H9.33V0ZM0,4,1.33,16h9.34L12,4ZM8,5h2.51l-1,10H8ZM1.49,5H4V15H2.53ZM7,15H5V5H7Z"
                                            fill="rgb(210, 67, 58)"
                                        />
                                    </svg>
                                </div>
                                <span>
                                    Remove
                                </span>
                            </button>
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
</form>,
  .c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c0 {
  background-color: rgb(216,216,216);
  background-color: transparent;
}

<div
    className="c0 c1"
    height="1.125rem"
/>,
  .c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c3 {
  min-width: 7.5rem;
}

.c2 {
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c1:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c5 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c5:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c5[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  margin-top: 0.375rem;
  margin-bottom: undefined;
}

<div
    className="c0"
>
    <button
        className="c1 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={[Function]}
        type="button"
    >
        Add Tag
    </button>
    <button
        className="c5 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={undefined}
        type="button"
    >
        Next
    </button>
</div>,
]
`;

exports[`renders <Tags expanded /> without throwing 1`] = `
Array [
  .c4 {
  font-size: 80%;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  background-color: rgb(216,216,216);
}

.c1 {
  margin-right: 0.375rem;
}

.c5 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    height="19"
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19 19"
                    width="19"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M18.61,9.3,9.69.39A1.29,1.29,0,0,0,8.76,0H1.32A1.33,1.33,0,0,0,0,1.33V8.76a1.33,1.33,0,0,0,.39.94L9.3,18.61a1.33,1.33,0,0,0,.94.39,1.3,1.3,0,0,0,.93-.39l7.44-7.44A1.32,1.32,0,0,0,18.61,9.3Zm-1.68,1-6.65,6.65a.17.17,0,0,1-.12.05.14.14,0,0,1-.11-.05l-8-8a.18.18,0,0,1,0-.12V2.19A.17.17,0,0,1,2.18,2H8.84a.16.16,0,0,1,.11,0l8,8a.15.15,0,0,1,.05.11A.17.17,0,0,1,16.93,10.28ZM6.61,4.06A2.55,2.55,0,1,0,9.16,6.61,2.55,2.55,0,0,0,6.61,4.06Zm0,4.08A1.53,1.53,0,1,1,8.14,6.61,1.54,1.54,0,0,1,6.61,8.14Z"
                        fill="rgb(73, 73, 73)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3 c4"
        >
            Tags
        </small>
    </div>
    <div
        className="c5"
    >
        <div
            className="c6 c7"
            height="0.0625rem"
        />
    </div>
</div>,
  .c4 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c2 {
  margin-bottom: 1.125rem;
}

.c3 {
  margin: 0;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
    className="c0"
>
    <div
        className="c1"
    >
        <div
            className="c2"
        >
            <p
                className="c3 c4"
            >
                Tags can be used to identify your instances, group multiple instances together, define firewall and affinity rules, and more.
                 
                <a
                    href="https://docs.joyent.com/public-cloud/tags-metadata/tags"
                    rel="noopener noreferrer"
                    target="__blank"
                >
                    Read the docs
                </a>
            </p>
        </div>
    </div>
</div>,
  .c1 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c0 {
  margin-bottom: 1.875rem;
}

<div
    className="c0"
>
    <h3
        className="c1"
    >
        0
         Tag
        s
    </h3>
</div>,
  .c0 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ul
    className="c0"
/>,
  .c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c3 {
  min-width: 7.5rem;
}

.c2 {
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c1:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c5 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c5:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c5[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  margin-top: 0.375rem;
  margin-bottom: undefined;
}

<div
    className="c0"
>
    <button
        className="c1 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={[Function]}
        type="button"
    >
        Add Tag
    </button>
    <button
        className="c5 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={undefined}
        type="button"
    >
        Next
    </button>
</div>,
]
`;

exports[`renders <Tags metadata=[] /> without throwing 1`] = `
.c4 {
  font-size: 80%;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  background-color: rgb(216,216,216);
}

.c1 {
  margin-right: 0.375rem;
}

.c5 {
  margin-top: 0.375rem;
  margin-bottom: undefined;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
  className=""
  id={undefined}
  onClick={undefined}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          height="19"
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 19 19"
          width="19"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.61,9.3,9.69.39A1.29,1.29,0,0,0,8.76,0H1.32A1.33,1.33,0,0,0,0,1.33V8.76a1.33,1.33,0,0,0,.39.94L9.3,18.61a1.33,1.33,0,0,0,.94.39,1.3,1.3,0,0,0,.93-.39l7.44-7.44A1.32,1.32,0,0,0,18.61,9.3Zm-1.68,1-6.65,6.65a.17.17,0,0,1-.12.05.14.14,0,0,1-.11-.05l-8-8a.18.18,0,0,1,0-.12V2.19A.17.17,0,0,1,2.18,2H8.84a.16.16,0,0,1,.11,0l8,8a.15.15,0,0,1,.05.11A.17.17,0,0,1,16.93,10.28ZM6.61,4.06A2.55,2.55,0,1,0,9.16,6.61,2.55,2.55,0,0,0,6.61,4.06Zm0,4.08A1.53,1.53,0,1,1,8.14,6.61,1.54,1.54,0,0,1,6.61,8.14Z"
            fill="rgb(73, 73, 73)"
          />
        </svg>
      </div>
    </div>
    <small
      className="c3 c4"
    >
      Tags
    </small>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6 c7"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Tags metadata=[] expanded /> without throwing 1`] = `
Array [
  .c4 {
  font-size: 80%;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgb(73,73,73);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  background-color: rgb(216,216,216);
}

.c1 {
  margin-right: 0.375rem;
}

.c5 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    height="19"
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19 19"
                    width="19"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M18.61,9.3,9.69.39A1.29,1.29,0,0,0,8.76,0H1.32A1.33,1.33,0,0,0,0,1.33V8.76a1.33,1.33,0,0,0,.39.94L9.3,18.61a1.33,1.33,0,0,0,.94.39,1.3,1.3,0,0,0,.93-.39l7.44-7.44A1.32,1.32,0,0,0,18.61,9.3Zm-1.68,1-6.65,6.65a.17.17,0,0,1-.12.05.14.14,0,0,1-.11-.05l-8-8a.18.18,0,0,1,0-.12V2.19A.17.17,0,0,1,2.18,2H8.84a.16.16,0,0,1,.11,0l8,8a.15.15,0,0,1,.05.11A.17.17,0,0,1,16.93,10.28ZM6.61,4.06A2.55,2.55,0,1,0,9.16,6.61,2.55,2.55,0,0,0,6.61,4.06Zm0,4.08A1.53,1.53,0,1,1,8.14,6.61,1.54,1.54,0,0,1,6.61,8.14Z"
                        fill="rgb(73, 73, 73)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3 c4"
        >
            Tags
        </small>
    </div>
    <div
        className="c5"
    >
        <div
            className="c6 c7"
            height="0.0625rem"
        />
    </div>
</div>,
  .c4 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c2 {
  margin-bottom: 1.125rem;
}

.c3 {
  margin: 0;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
    className="c0"
>
    <div
        className="c1"
    >
        <div
            className="c2"
        >
            <p
                className="c3 c4"
            >
                Tags can be used to identify your instances, group multiple instances together, define firewall and affinity rules, and more.
                 
                <a
                    href="https://docs.joyent.com/public-cloud/tags-metadata/tags"
                    rel="noopener noreferrer"
                    target="__blank"
                >
                    Read the docs
                </a>
            </p>
        </div>
    </div>
</div>,
  .c1 {
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c0 {
  margin-bottom: 1.875rem;
}

<div
    className="c0"
>
    <h3
        className="c1"
    >
        0
         Tag
        s
    </h3>
</div>,
  .c0 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ul
    className="c0"
/>,
  .c4 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c3 {
  min-width: 7.5rem;
}

.c2 {
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c1:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c5 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c5:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c5[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  margin-top: 0.375rem;
  margin-bottom: undefined;
}

<div
    className="c0"
>
    <button
        className="c1 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={[Function]}
        type="button"
    >
        Add Tag
    </button>
    <button
        className="c5 c2 c3 c4"
        data-ui-button="true"
        href=""
        onClick={undefined}
        type="button"
    >
        Next
    </button>
</div>,
]
`;
